# rts-sandbox

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/bench/: Benchmark.hpp
src/debug/: DebugUI.hpp  Profiler.hpp
src/ecs/: Components.hpp  Entity.hpp  Registry.hpp  SparseSet.hpp
src/systems/: FogSystem.hpp  FormationSystem.hpp  MovementSystem.hpp  OrderSystem.hpp  RenderSystem.hpp  SelectionSystem.hpp  SeparationSystem.hpp
src/world/: Grid.hpp  Pathfinding.cpp  Pathfinding.hpp
